# crow-translate

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COPYING  Crow.pro  CrowTranslate.pro  README.md  README_es.md  crow-translate.pro  crowdin.yml  vcpkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml  release.yml  vcpkg.txt
cmake/: AppImage.cmake  CPackProjectConfig.cmake  DetectLibraryType.cmake  ExternalLibraries.cmake  FindLeptonica.cmake  FindTesseract.cmake  FindWEBP.cmake  IgnoreExternalCodeChecks.cmake  InstallRuntimeDependencies.cmake
data/: io.crow_translate.CrowTranslate.desktop  io.crow_translate.CrowTranslate.desktop.in  io.crow_translate.CrowTranslate.metainfo.xml  resources.qrc  windows-icons.qrc
data/icons/: flags.qrc  fluent-icon-theme.qrc  icon-theme.qrc  index.theme  we10x.qrc
data/icons/Papirus/: index.theme
data/icons/app/: update-png.sh
data/icons/engines/: engines.qrc
data/icons/flags/: flags.qrc
data/icons/freedesktop/: application.qrc  freedesktop.qrc  papirus.qrc  we10x.qrc
data/icons/windows/: windows.qrc
data/translations/: crow-translate.ts  crow-translate_ar_SA.ts  crow-translate_az.ts  crow-translate_az_AZ.ts  crow-translate_de_DE.ts  crow-translate_el.ts  crow-translate_el_GR.ts  crow-translate_en_MY.ts  crow-translate_es_ES.ts  crow-translate_et_EE.ts  crow-translate_eu_ES.ts  crow-translate_fi.ts  crow-translate_fi_FI.ts  crow-translate_fr.ts  crow-translate_fr_FR.ts  crow-translate_hi.ts  crow-translate_hi_IN.ts  crow-translate_hr_HR.ts  crow-translate_hu_HU.ts  crow-translate_id.ts  crow-translate_id_ID.ts  crow-translate_it.ts  crow-translate_it_IT.ts  crow-translate_ko_KR.ts  crow-translate_lv_LV.ts  crow-translate_ms_MY.ts  crow-translate_nl.ts  crow-translate_nl_NL.ts  crow-translate_pl_PL.ts  crow-translate_pt.ts  crow-translate_pt_BR.ts  crow-translate_pt_PT.ts  crow-translate_ru.ts  crow-translate_ru_RU.ts  crow-translate_sq.ts  crow-translate_sq_AL.ts  crow-translate_tr-TR.ts  crow-translate_tr.ts  crow-translate_tr_TR.ts  crow-translate_ug.ts  (+18 more)
src/: addlangdialog.cpp  addlangdialog.h  addlangdialog.ui  addlanguagedialog.cpp  addlanguagedialog.h  addlanguagedialog.ui  appsettings.cpp  appsettings.h  buttongrouplanguages.cpp  buttongrouplanguages.h  cli.cpp  cli.h  cmake.h.in  contextmenu.cpp  contextmenu.h  dialog.ui  langbuttongroup.cpp  langbuttongroup.h  languagebuttonsgroup.cpp  languagebuttonsgroup.h  languagebuttonswidget.cpp  languagebuttonswidget.h  languagebuttonswidget.ui  languagesdialog.cpp  languagesdialog.h  languagesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orientationwatcher.cpp  orientationwatcher.h  playerbuttons.cpp  playerbuttons.h  playerbuttons.ui  popupwindow.cpp  popupwindow.h  popupwindow.ui  quickeditor.cpp  quickeditor.h  (+26 more)
src/fileutil/: fileutil.cpp  fileutil.h  showmsg.cpp  showmsg.h
src/ocr/: comparableqpoint.h  ocr.cpp  ocr.h  quickeditor.cpp  quickeditor.h  screengrabber.cpp  screengrabber.h  snippingarea.cpp  snippingarea.h
src/ocr/screengrabbers/: abstractscreengrabber.cpp  abstractscreengrabber.h  dbusscreengrabber.cpp  dbusscreengrabber.h  genericscreengrabber.cpp  genericscreengrabber.h  waylandgnomescreengrabber.cpp  waylandgnomescreengrabber.h  waylandplasmascreengrabber.cpp  waylandplasmascreengrabber.h  waylandportalscreengrabber.cpp  waylandportalscreengrabber.h
src/settings/: appsettings.cpp  appsettings.h  ocrlanguageslistwidget.cpp  ocrlanguageslistwidget.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tesseractparameterstablewidget.cpp  tesseractparameterstablewidget.h
src/settings/autostartmanager/: abstractautostartmanager.cpp  abstractautostartmanager.h  macosautostartmanager.cpp  macosautostartmanager.h  portalautostartmanager.cpp  portalautostartmanager.h  unixautostartmanager.cpp  unixautostartmanager.h  unixconfigautostartmanager.cpp  unixconfigautostartmanager.h  windowsautostartmanager.cpp  windowsautostartmanager.h
src/settings/autostartmgr/: abstractautostartmgr.cpp  abstractautostartmgr.h  portalautostartmgr.cpp  portalautostartmgr.h  unixconfigautostartmgr.cpp  unixconfigautostartmgr.h  windowsautostartmgr.cpp  windowsautostartmgr.h
src/settings/shortcutsmodel/: shortcutitem.cpp  shortcutitem.h  shortcutsmodel.cpp  shortcutsmodel.h  shortcutsview.cpp  shortcutsview.h
src/transitions/: conditiontransition.h  languagedetectedtransition.cpp  languagedetectedtransition.h  ocruninitializedtransition.cpp  ocruninitializedtransition.h  playerstoppedtransition.cpp  playerstoppedtransition.h  retranslationtransition.cpp  retranslationtransition.h  snippingvisibletransition.cpp  snippingvisibletransition.h  textemptytransition.cpp  textemptytransition.h  translatorabortedtransition.cpp  translatorabortedtransition.h  translatorerrortransition.cpp  translatorerrortransition.h
